<resources>
    <string name="app_name">AndroidProjectCollection</string>

    <!--Layout Exercise-->
    <string name="btnLayoutExercise_text">Layout Exercise</string>
    <string name="btnButton1_text">Button</string>
    <string name="btn_description">This is a b u t t o n.</string>
    <string name="imageView_description">This is an image.</string>
    <string name="scrollView_description">This is a scroll view.</string>
    <string name="username1">Your Story</string>
    <string name="username2">abcdef</string>
    <string name="username3">lmnop</string>
    <string name="username4">uvwxyz</string>
    <string name="username5">ijwtrip</string>
    <string name="username6">eleelele</string>
    <string name="username7">hahaha</string>
    <string name="btn_like_description">Like b u t t o n</string>
    <string name="btn_share_description">Share b u t t o n</string>
    <string name="btn_bookmark_description">Bookmark b u t t o n</string>
    <string name="comment_description">Add a comment ...</string>

    <!--Button Exercise-->
    <string name="btnButtonExercise_text">Button Exercise</string>
    <string name="btnGoToNewActivity_text">Go to new Activity</string>
    <string name="btnClose_text">Close</string>
    <string name="btnToast_text">Toast</string>
    <string name="btnChangeBG_text">Change BG</string>
    <string name="btnChangeButtonBG_text">Change Button BG</string>
    <string name="btnDisappear_text">Disappear</string>
    <string name="btnReturn_text">Return</string>

    <!--Calculator Exercise-->
    <string name="btnCalculatorExercise">Calculator Exercise</string>
    <string name="btnNumber0">0</string>
    <string name="btnNumber1">1</string>
    <string name="btnNumber2">2</string>
    <string name="btnNumber3">3</string>
    <string name="btnNumber4">4</string>
    <string name="btnNumber5">5</string>
    <string name="btnNumber6">6</string>
    <string name="btnNumber7">7</string>
    <string name="btnNumber8">8</string>
    <string name="btnNumber9">9</string>
    <string name="btnOpAdd">+</string>
    <string name="btnOpSub">-</string>
    <string name="btnOpDiv">÷</string>
    <string name="btnOpMul">×</string>
    <string name="btnOpEquals">=</string>
    <string name="btnOpPeriod">.</string>
    <string name="btnClear">Clear All</string>

    <!-- Midterm Exam | Tic Tac Toe -->
    <string name="btnPlayTicTacToe">TIC TAC TOE</string>
    <string name="btnRestart">Restart</string>

    <!--Match 3-->
    <string name="btnMatch3">Match 3</string>
    <string name="tv_MScore">Score: </string>

    <!--Passing Intents-->
    <string name="btnPassingIntents">Passing Intents</string>
    <string name="tvStudentRegTitle">Student Registration Form</string>
    <string name="tvStudentRegName">Complete Name</string>
    <string name="etxtFName">First Name</string>
    <string name="etxtLName">Last Name</string>
    <string name="tvStudentRegGender">Gender</string>
    <string name="radMale">Male</string>
    <string name="radFemale">Female</string>
    <string name="radOthers">Others</string>
    <string name="tvStudentRegBDate">Birth Date</string>
    <string name="tvStudentRegEmailAdd">Email Address</string>
    <string name="tvStudentRegPN">Phone Number</string>
    <string name="btnPIClear">Clear</string>
    <string name="btnPISubmit">Submit</string>
    <string name="spnr_description">This is a s p i n n e r</string>
    <string name="etxtPN_description">This is an input form for P H O N E numbers.</string>
    <string name="tvStudentRegCivilStatus">Civil Status</string>
    <string name="radSingle">Single</string>
    <string name="radMarried">Married</string>
    <string name="radDivorced">Divorced</string>
    <string name="radWidowed">Widowed</string>
    <string name="tvStudentRegHomeAdd">Home Address</string>
    <string name="tvStudentRegBirthPlace">Place of Birth</string>
    <string name="tvStudentRegProgram">Program</string>
    <string name="tvStudentRegYearLevel">Year Level</string>
    <string name="selectProgram"> </string>
    <string name="tvStudentProfile">Student Profile</string>
    <!--Fragments-->
    <string name="btnFragments">Fragments</string>

    <!--Menus-->
    <string name="btnMenuExercise">Menu</string>
    <string name="mItemChange">Change</string>
    <string name="mItemReset">Reset</string>
    <string name="mItemExit">Exit</string>
    <string name="mItem">Item</string>
    <string name="mItemCBtnColor">Button Color</string>
    <string name="mItemCBtnText">Button Text</string>
    <string name="mItemCBtnTextColor">Button Text Color</string>
    <string name="mItemCBtnSize">Button Size</string>
    <string name="mItemCBtnVisibility">Button Visibility</string>
    <string name="mItemCBtnRotation">Button Rotation</string>
</resources>